--- a/README.org
+++ b/README.org
@@ -42,3 +42,6 @@
 [[https://github.com/ttt307307/AndCustom/blob/master/samples/image-folder/imageviewprogressivelydemo.gif][file:https://github.com/ttt307307/AndCustom/blob/master/samples/image-folder/imageviewprogressivelydemo.gif]]
 
 * TODO
+** TODO ListTableView数据绑定
+** TODO table单行控制，避免格式乱
+** TODO 多种分页指示器编写
